<resources>
    <string name="app_name">Lab4 M18 - Kevin Ma</string>

    <!--database stuff-->
    <string-array name="db_table_names">
        <item>Nurse</item>
        <item>Doctor</item>
        <item>Patient</item>
        <item>Test</item>
    </string-array>

    <string-array name="db_table_create_strings">
        <item>"CREATE TABLE Nurse (nurseId integer primary key, firstName text, lastName text, department text, password text);"</item>
        <item>"CREATE TABLE Doctor (doctorId integer primary key, firstName text, lastName text, department text, password text);"</item>
        <item>"CREATE TABLE Patient (patientId integer primary key, firstName text, lastName text, department text, doctorId integer, room text);"</item>
        <item>"CREATE TABLE Test (testId integer primary key, patientId integer, nurseId integer, systolicBPL integer, diastolicBPL integer, BPH integer, temperature real, height real, weight real, BMI real);"</item>
    </string-array>

    <!--main/launcher activity-->
    <string name="main_menu_instructions">Select exercise to demonstrate: </string>
    <string name="ex1">Exercise 1</string>
    <string-array name="main_menu_exercise_list">
        <item>@string/ex1</item>
    </string-array>
    <string name="main_menu_clicked_msg">"Clicked on "</string>

    <!--login activity-->
    <string name="login_label">Lab4 Ex1 M18 - Login</string>
    <string name="login_header">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>

    <!--home menu-->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_patient_management">Patient Management</string>
    <string name="menu_test_management">Test Management</string>
    <string name="menu_logout">Logout</string>

    <!--home activity-->
    <string name="home_label">Lab4 Ex1 M18 - Home</string>
    <string name="home_logout">Logout</string>

    <!--patient management-->
    <string name="patient_listing_label">Lab4 Ex1 M18 - Patient Listing</string>
    <string name="patient_details_label">Lab4 Ex1 M18 - Patient Details</string>
    <string name="patient_mutation_add_label">Lab4 Ex1 M18 - New Patient</string>
    <string name="patient_mutation_update_label">Lab4 Ex1 M18 - Update Patient Information</string>

    <string name="patient_listing_id_placeholder">Patient Id</string>
    <string name="patient_listing_view_btn">View</string>
    <string name="patient_listing_add_btn">Add</string>

    <string name="patient_id_label">Patient Id</string>
    <string name="patient_fname_label">First Name</string>
    <string name="patient_lname_label">Last Name</string>
    <string name="patient_dept_label">Department</string>
    <string name="patient_doctor_label">Doctor</string>
    <string name="patient_room_label">Room</string>

    <string name="patient_mutation_update_btn">Update</string>
    <string name="patient_mutation_add_btn">Add</string>
    <string name="patient_mutation_cancel_btn">Cancel</string>

    <!--test management-->
    <string name="test_listing_label">Lab4 Ex1 M18 - Test Listing</string>
    <string name="test_details_label">Lab4 Ex1 M18 - Test Details</string>
    <string name="test_mutation_add_label">Lab4 Ex1 M18 - New Test</string>
    <string name="test_mutation_update_label">Lab4 Ex1 M18 - Update Test Information</string>

    <string name="test_listing_id_placeholder">Test Id</string>

    <string name="test_id_label">Test Id</string>
    <string name="test_patient_label">Patient</string>
    <string name="test_nurse_label">Nurse</string>
    <string name="test_bpl_label">BPL</string>
    <string name="test_bph_label">Benign Prostatic Hyperplasia</string>
    <string name="test_temperature_label">Temperature</string>
    <string name="test_height_label">Height</string>
    <string name="test_weight_label">Weight</string>
    <string name="test_bmi_label">BMI</string>

</resources>
