<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cencol.kevinma_comp304Lab4_Ex1.TestMutationActivity">

    <EditText
        android:id="@+id/test_mutation_temp_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label10"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_bph_val" />

    <EditText
        android:id="@+id/test_mutation_height_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label7"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_temp_val" />

    <EditText
        android:id="@+id/test_mutation_weight_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label8"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_height_val" />

    <EditText
        android:id="@+id/test_mutation_bmi_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label9"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_weight_val" />

    <EditText
        android:id="@+id/test_mutation_bph_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label6"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_bpl_val" />

    <Spinner
        android:id="@+id/test_mutation_nurse_spinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label4"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_patient_spinner" />

    <Spinner
        android:id="@+id/test_mutation_patient_spinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label3"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_id_val" />

    <TextView
        android:id="@+id/test_mutation_id_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/patient_mutation_action_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Button"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/patient_mutation_cancel_btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label9" />

    <Button
        android:id="@+id/patient_mutation_cancel_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_mutation_cancel_btn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_action_btn2"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_bmi_val" />

    <TextView
        android:id="@+id/patient_mutation_id_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_id_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patient_mutation_id_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_patient_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label2" />

    <TextView
        android:id="@+id/patient_mutation_id_label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_nurse_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label3" />

    <TextView
        android:id="@+id/patient_mutation_id_label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_bpl_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label4" />

    <TextView
        android:id="@+id/patient_mutation_id_label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_bph_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label5" />

    <TextView
        android:id="@+id/patient_mutation_id_label7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_height_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label10" />

    <TextView
        android:id="@+id/patient_mutation_id_label8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_weight_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label7" />

    <TextView
        android:id="@+id/patient_mutation_id_label9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_bmi_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label8" />

    <TextView
        android:id="@+id/patient_mutation_id_label10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_temperature_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_mutation_id_label6" />

    <EditText
        android:id="@+id/test_mutation_bpl_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/patient_mutation_id_label5"
        app:layout_constraintTop_toBottomOf="@+id/test_mutation_nurse_spinner" />
</android.support.constraint.ConstraintLayout>
